--- a/app/src/main/res/drawable/btn_lower.xml
+++ b/app/src/main/res/drawable/btn_lower.xml
@@ -1,17 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
-        <shape android:shape="rectangle">
-            <corners android:radius="10dp" />
-            <solid android:color="#FF4500" />
-            <padding android:left="16dp" android:top="16dp" android:right="16dp" android:bottom="16dp" />
-        </shape>
-    </item>
-    <item>
-        <shape android:shape="rectangle">
-            <corners android:radius="10dp" />
-            <solid android:color="#FF6347" />
-            <padding android:left="16dp" android:top="16dp" android:right="16dp" android:bottom="16dp" />
-        </shape>
-    </item>
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FF0000"/> <!-- Red color -->
+    <corners android:radius="4dp"/>
+    <padding
+        android:left="8dp"
+        android:top="8dp"
+        android:right="8dp"
+        android:bottom="8dp"/>
+</shape>
