--- a/app/src/main/res/drawable/btn_red.xml
+++ b/app/src/main/res/drawable/btn_red.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFA500"/> <!-- Orange color -->
+    <solid android:color="#FF0000"/>
     <corners android:radius="4dp"/>
     <padding
         android:left="8dp"
