--- a/app/src/main/res/layout/dialog_change_name.xml
+++ b/app/src/main/res/layout/dialog_change_name.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -84,7 +85,7 @@
             android:layout_height="30dp"
             android:layout_marginStart="8dp"
             android:src="@android:drawable/ic_menu_close_clear_cancel"
-            android:tint="@color/red"/>
+            app:tint="@color/red" />
     </LinearLayout>
 
     <TextView
