--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -1,36 +1,54 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundcloth"
     android:padding="16dp">
 
-    <TextView
-        android:id="@+id/titleText"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/topLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Ride The Bus"
-        android:textColor="@color/yellow"
-        android:textSize="24dp"
-        android:gravity="center"
-        android:padding="8dp"
-        android:shadowColor="#000000"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="3"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="16dp" />
-<!--Rotation 270 -->
+        android:layout_marginBottom="16dp">
+
+        <ImageButton
+            android:id="@+id/btnBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/baseline_arrow_back_24"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="16dp"
+            app:tint="@android:color/white" />
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ride The Bus"
+            android:textSize="24sp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="16dp" />
+
+    </RelativeLayout>
+
     <LinearLayout
         android:id="@+id/cardsLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_below="@id/titleText"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/topLayout"
         android:gravity="center"
         android:layout_marginBottom="16dp">
-<!--Rotation 180 -->
+
         <FrameLayout
             android:id="@+id/frameLayout1"
             android:layout_width="140dp"
@@ -69,8 +87,8 @@
 
         <FrameLayout
             android:id="@+id/frameLayout4"
-            android:layout_width="140dp"
-            android:layout_height="180dp">
+            android:layout_width="115dp"
+            android:layout_height="175dp">
             <ImageView
                 android:id="@+id/cardStack4"
                 android:layout_width="match_parent"
