--- a/app/src/main/res/layout/activity_stack_detail.xml
+++ b/app/src/main/res/layout/activity_stack_detail.xml
@@ -14,7 +14,7 @@
         android:contentDescription="Back"
         android:padding="8dp"
         android:layout_gravity="start"
-        android:layout_marginBottom="16dp"/>
+        />
 
     <TextView
         android:id="@+id/tvStackTitle"
@@ -30,10 +30,19 @@
         android:layout_gravity="center"
         android:padding="8dp" />
 
+    <TextView
+        android:id="@+id/tvCardCounts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="24sp"
+        android:textColor="@color/yellow"
+        android:layout_gravity="center"
+         />
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStackCards"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:orientation="horizontal"/>
 </LinearLayout>
