--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -6,60 +6,58 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tvFinishMessage"
+        android:id="@+id/tvScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play Again?"
-        android:textSize="35sp"
-        android:textColor="@color/yellow"
-        android:shadowColor="#000000"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:layout_alignParentTop="true"
-        android:padding="8dp" />
-
-    <Button
-        android:id="@+id/btnLeaderboard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Go To Leaderboard"
-        android:background="@drawable/btn_leaderboard"
+        android:text="Score: 0"
+        android:textSize="24sp"
         android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:layout_below="@id/tvFinishMessage"
-        android:padding="8dp"
         android:textStyle="bold"
-        android:textSize="16sp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
 
-    <Button
-        android:id="@+id/btnPlayAgain"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play Again"
-        android:background="@drawable/btn_playagain"
-        android:textColor="@android:color/white"
+        android:orientation="horizontal"
+        android:layout_below="@id/tvScore"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:layout_below="@id/btnLeaderboard"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:textSize="16sp" />
+        android:layout_marginTop="32dp">
 
-    <Button
-        android:id="@+id/btnExit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Exit"
-        android:background="@drawable/btn_exit"
-        android:textColor="@android:color/white"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp"
-        android:layout_below="@id/btnPlayAgain"
-        android:padding="8dp"
-        android:textStyle="bold"
-        android:textSize="16sp" />
+        <Button
+            android:id="@+id/btnLeaderboard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Go To Leaderboard"
+            android:background="@drawable/btn_leaderboard"
+            android:textColor="@android:color/white"
+            android:layout_marginEnd="16dp"
+            android:padding="8dp"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btnPlayAgain"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Play Again"
+            android:background="@drawable/btn_playagain"
+            android:textColor="@android:color/white"
+            android:layout_marginEnd="16dp"
+            android:padding="8dp"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/btnExit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Exit"
+            android:background="@drawable/btn_exit"
+            android:textColor="@android:color/white"
+            android:padding="8dp"
+            android:textStyle="bold"
+            android:textSize="16sp" />
+    </LinearLayout>
+
 </RelativeLayout>
