--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -58,7 +58,7 @@
                 android:id="@+id/cardStack1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:rotation="180" />
+                android:rotation="360" />
         </FrameLayout>
 
         <FrameLayout
@@ -68,10 +68,22 @@
             android:layout_marginEnd="8dp">
             <ImageView
                 android:id="@+id/cardStack2"
-                android:layout_width="135dp"
-                android:layout_height="180dp"
-                android:rotation="180" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:rotation="360" />
         </FrameLayout>
+
+        <ImageView
+            android:id="@+id/cardback"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:srcCompat="@drawable/cardback"
+            app:layout_constraintTop_toBottomOf="@id/title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:rotation="90"
+            android:layout_marginTop="16dp"/>
+
 
         <FrameLayout
             android:id="@+id/frameLayout3"
@@ -80,20 +92,22 @@
             android:layout_marginEnd="8dp">
             <ImageView
                 android:id="@+id/cardStack3"
-                android:layout_width="135dp"
-                android:layout_height="180dp"
-                android:rotation="180" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:rotation="360" />
         </FrameLayout>
 
         <FrameLayout
             android:id="@+id/frameLayout4"
-            android:layout_width="115dp"
-            android:layout_height="175dp">
+            android:layout_width="140dp"
+            android:layout_height="180dp"
+            android:layout_marginEnd="8dp">
+
             <ImageView
                 android:id="@+id/cardStack4"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:rotation="180" />
+                android:rotation="360" />
         </FrameLayout>
     </LinearLayout>
 
