--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,7 +6,6 @@
     android:background="@drawable/backgroundcloth"
     tools:context=".MainActivity">
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_start"
         android:layout_width="wrap_content"
@@ -15,7 +13,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.25" />
 
-    <!-- Guideline at 75% width -->
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline_end"
         android:layout_width="wrap_content"
@@ -23,7 +20,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.75" />
 
-    <!-- Profile icon -->
     <ImageView
         android:id="@+id/profileIcon"
         android:layout_width="50dp"
@@ -34,7 +30,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- App Title -->
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
@@ -50,8 +45,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-
-    <!-- Bus Icon -->
     <ImageView
         android:id="@+id/busIcon"
         android:layout_width="200dp"
@@ -62,7 +55,6 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <!-- Buttons -->
     <Button
         android:id="@+id/playButton"
         android:layout_width="0dp"
@@ -113,21 +105,21 @@
         app:layout_constraintEnd_toEndOf="@id/guideline_end"
         android:layout_marginTop="16dp"/>
 
-    <!-- Ride Counter -->
     <TextView
-        android:id="@+id/rideCounter"
+        android:id="@+id/rideCounterCombined"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0 Cards Ridden"
+        android:text="0\nCards Ridden"
         android:textSize="30sp"
         android:textColor="@color/yellow"
         android:shadowColor="#000000"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/recentRidesButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="center"
+        app:layout_constraintTop_toBottomOf="@+id/recentRidesButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
