Done For The Night Officially. Google AdMob implemented

--- a/app/src/main/res/layout/activity_finish.xml
+++ b/app/src/main/res/layout/activity_finish.xml
@@ -6,28 +6,49 @@
     android:padding="16dp">
 
     <TextView
+        android:id="@+id/tvScore2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Play Again?"
+        android:textSize="40sp"
+        android:textColor="@color/yellow"
+        android:shadowColor="#000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp" />
+
+    <TextView
         android:id="@+id/tvScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Score: 0"
         android:textSize="24sp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/yellow"
+        android:shadowColor="#000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/tvScore2"
         android:layout_marginTop="16dp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_below="@id/tvScore"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp">
+        android:layout_marginTop="32dp"
+        android:weightSum="3"> <!-- Setting weightSum to 3 for 3 buttons -->
 
         <Button
             android:id="@+id/btnLeaderboard"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Go To Leaderboard"
             android:background="@drawable/btn_leaderboard"
             android:textColor="@android:color/white"
@@ -38,8 +59,9 @@
 
         <Button
             android:id="@+id/btnPlayAgain"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Play Again"
             android:background="@drawable/btn_playagain"
             android:textColor="@android:color/white"
@@ -50,8 +72,9 @@
 
         <Button
             android:id="@+id/btnExit"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:text="Exit"
             android:background="@drawable/btn_exit"
             android:textColor="@android:color/white"
