--- a/app/src/main/res/layout/item_recent_rides.xml
+++ b/app/src/main/res/layout/item_recent_rides.xml
@@ -5,11 +5,18 @@
     android:orientation="horizontal"
     android:padding="8dp">
 
+    <ImageView
+        android:id="@+id/iv_platform_logo"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="8dp"
+        android:contentDescription="@string/platform_logo" />
+
     <TextView
         android:id="@+id/tv_player_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="3"
         android:textColor="@color/yellow"
         android:shadowColor="#000000"
         android:shadowDx="2"
@@ -20,20 +27,22 @@
 
     <TextView
         android:id="@+id/tv_timestamp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="2"
         android:textColor="@color/yellow"
         android:shadowColor="#000000"
         android:shadowDx="2"
         android:shadowDy="2"
         android:shadowRadius="3"
-        android:textSize="24sp"
+        android:textSize="15sp"
         android:layout_marginEnd="8dp"/>
 
     <TextView
         android:id="@+id/tv_score"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:textColor="@color/yellow"
         android:shadowColor="#000000"
         android:shadowDx="2"
