--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="orange_dark">#FFA500</color>
     <color name="green_dark">#006400</color>
     <color name="darker_gray">#A9A9A9</color>
+    <color name="clear">#00000000</color>
 </resources>
