--- a/app/src/main/res/layout/activity_stack_detail.xml
+++ b/app/src/main/res/layout/activity_stack_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -37,12 +38,20 @@
         android:textSize="24sp"
         android:textColor="@color/yellow"
         android:layout_gravity="center"
-         />
-
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvStackCards"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:orientation="horizontal"/>
+
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-7120216648764232/8738396414"/>
+
 </LinearLayout>
